# RAMSuite

./: .breakpoints  .replit  README.md  app.db  config.py  dump.rdb  fw.json  initdb.py  pyproject.toml  replit.nix  requirements.txt  run.bash  run.py  run.sh
app/: __init__.py  extensions.py  utils.py
app/availability/: __init__.py  routes.py
app/examples/: __init__.py  examples1.md  routes.py
app/main/: main_data.py  routes.py
app/maintenance/: __init__.py  routes.py
app/models/: dbgenerics.py  maintenance.py  ram.py  risk.py
app/resources/: __init__.py  routes.py
app/resources/static/: resourceindex.py
app/static/css/: style.css
app/static/helpers/: global_formatting_functions.py  global_reliability_helpers.py  main_data.py  site_map.py
app/static/js/: dist_param_modifier.js  home.js  loader.js  task_status.js
app/survival/: __init__.py  routes.py
app/tasks/: __init__.py  routes.py  shared_tasks.py
app/templates/: base.html  base_app.html  footer.html  index.html  navbar.html
app/templates/availability/: index.html  packageuptime.html  packageuptime_result.html  ram.html  ram_model_manager.html  ram_result.html  ram_sim_result.html  rbd.html
app/templates/components/: mapped_accordion.html  tool_cards.html
app/templates/examples/: index.html  survival.html
app/templates/macros/: accordions.html  forms.html
app/templates/maintenance/: fmea.html  fmea_model_manager.html  index.html
app/templates/resources/: base.html  software.html
app/tests/: fmea_test.py  ram_test.py  rbd_test.py  singlepackageuptime_test.py
db/: admin.py
(+32 files in other folders)
