[tool.poetry]
name = "repl_nix_RAMSuite"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
Flask = "^2.3.2"
pandas = "^2.0.3"
scipy = "1.11.3"
celery = "^5.3.4"
matplotlib = "^3.8.0"
redis = "^5.0.1"
reliability = "^0.8.13"
app = "^0.0.1"
bs4 = "^0.0.1"
SQLAlchemy = "^2.0.21"
Flask-SQLAlchemy = "^3.1.1"
Markdown = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
